Fixed z-index for button

--- a/Styles/Components/_BlogComment.scss
+++ b/Styles/Components/_BlogComment.scss
@@ -34,6 +34,7 @@
     border: none;
     color: $gray-4;
     padding: 2px;
+    z-index: 20;
   }
   
   button:hover {
